# bonsai

./: .gitignore  Cargo.toml  README.md  flake.nix  justfile
src/: app.rs  bn.rs  cli.rs  config.rs  error.rs  hooks.rs  lib.rs
src/commands/: add.rs  cd.rs  completion.rs  init.rs  list.rs  lock.rs  mod.rs  move_wt.rs  prune.rs  remove.rs  rename.rs  shell_init.rs  status.rs
src/git/: branch.rs  mod.rs  runner.rs  status.rs  worktree.rs
tests/integration/: helpers.rs  main.rs  test_add.rs  test_cd.rs  test_init.rs  test_list.rs  test_lock.rs  test_move.rs  test_remove.rs  test_rename.rs  test_shell_init.rs  test_status.rs
