[package]
name = "bonsai-wt"
version = "0.1.0"
edition = "2021"
authors = ["mei"]
description = "Intuitive Git worktree management CLI"
license = "MIT"
repository = "https://github.com/mei28/bonsai"
readme = "README.md"
keywords = ["git", "worktree", "cli", "productivity"]
categories = ["command-line-utilities", "development-tools"]
exclude = [".claude/", ".tmp/"]

[lib]
name = "bonsai"

[[bin]]
name = "bonsai"
path = "src/main.rs"

[[bin]]
name = "bn"
path = "src/bn.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
thiserror = "2"
colored = "2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
